BUG: Clip too long topography names in plot card's legend.

--- a/topobank/static/css/project.css
+++ b/topobank/static/css/project.css
@@ -201,5 +201,9 @@ body, html {
 
 */
 
-
+/** Checkboxes in analyses plot */
+.topobank-topography-checkbox div.bk-input-group {
+  overflow: hidden;
+  text-overflow: ellipsis; /** this does not work here, don't know why */
+}
 
